changes in comments api, use movieId instead of movieEpisodeId
